gitops/platform-apps/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    app.kubernetes.io/name: paperless
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
