gitops/platform-apps/paperless/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.__ZONE_NAME__`)
      services:
        - kind: Service
          name: paperless
          port: 80
  tls: {}
